test/corpus/call.txt
============================================
Call
============================================

_a: @global.html.a
_strong: @global.html.strong
x: @root._a{ href: "/" }("home")
y: @root._a{ href: "/docs" }"docs"
z: @root._a{ href: "/blog" }(@root._strong"blog")

----

(source
    (definition (key) (ref (path (global) (id) (id))))
    (definition (key) (ref (path (global) (id) (id))))
    (definition (key) (ref (path (root) (id)) (map (pair (key (id)) (text (s)))) (call (text (s)))))
    (definition (key) (ref (path (root) (id)) (map (pair (key (id)) (text (s)))) (call (text (s)))))
    (definition (key) (ref (path (root) (id)) (map (pair (key (id)) (text (s)))) (call (ref (path (root) (id)) (call (text (s)))))))
)


============================================
Partial application
============================================

_x: @global.html.a{ target:"_blank", rel:"noopener noreferrer"}
y: @root._x{ href: "/" }("home")

----
(source
    (definition (key)
        (ref
            (path (global) (id) (id))
            (map
                (pair (key (id)) (text (s)))
                (pair (key (id)) (text (s)))
            )
        )
    )
    (definition (key)
        (ref (path (root) (id))
            (map (pair (key (id)) (text (s))))
            (call (text (s)))
        )
    )
)
